Se subio letras inferiores a la imagen

--- a/Lab1Gtics/src/main/resources/templates/principal.html
+++ b/Lab1Gtics/src/main/resources/templates/principal.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 
-<img src="/Muyuna-lodge-Iquitos.webp" alt="">
+    <img src="/Muyuna-lodge-Iquitos.webp" alt="">
 
 
-    <h2>Mensaje</h2>
+    <nav class="nav">
+        <a class="nav-link active" aria-current="page" href="#">Nuestra flota</a>
+        <a class="nav-link" href="#">Oficinas</a>
+        <a class="nav-link" href="#">Equipajes</a>
+        <a class="nav-link" href="#">Paquetes</a>
+    </nav>
 </body>
 </html>
